--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <style>
+      body {
+        background-image: url("images/galaxy-honkai-star-rail.webp");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    </style> -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
@@ -12,12 +20,11 @@
     <h1>Angel Torres's HCDE 439 Physical Computing Page!</h1>
 
     <div class="header">
-      <img src="IMG_9366.jpg" width="500" height="500" />
+      <img src="images/herta-spinning.gif" width="400" height="400" />
       <p>
-        My name is Angel Torres and I am a HCDE major going into my 4th year
-        here at the University of Washington. I like to play the Pokemon 
-        Trading Card Game and I like to chill and hang out with friends 
-        on my free time.
+        My name is Angel Torres and I am a HCDE major going into my 4th year here at the University 
+        of Washington. I like to play the Pokemon Trading Card Game and I like to chill and hang 
+        out with friends on my free time.
       </p>
     </div>
 
@@ -25,15 +32,18 @@
       <div class="assignment">
         <a href="a1.html">
           <h2>Assignment 1: Blink!</h2>
-          <img src="red-panda.jpg" />
+          <img src="images/Circuit.jpg" />
         </a>
-        <p>Assignment 1 was a panda!</p>
+        <p>
+          Using Arduino programming, we are able to create a circuit that is capable of making LEDs
+          blink in a sequence
+        </p>
       </div>
 
       <div class="assignment">
         <a href="a2.html">
           <h2>Assignment 2: Fade!</h2>
-          <img src="red-panda.jpg" />
+          <img src="images/red-panda.jpg" />
         </a>
         <p>Assignment 2 was a panda!</p>
       </div>
@@ -41,10 +51,11 @@
       <div class="assignment">
         <a href="a2.html">
           <h2>Assignment 2: Fade!</h2>
-          <img src="red-panda.jpg" />
+          <img src="images/red-panda.jpg" />
         </a>
         <p>Assignment 2 was a panda!</p>
       </div>
     </div>
   </body>
 </html>
+ 
