--- a/a1.html
+++ b/a1.html
@@ -7,27 +7,6 @@
     <title>Assignment 1: Blink!</title>
 
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <style>
-      .image-row {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
-      }
-      .image-row img {
-        max-width: 48%;
-        height: auto;
-        border-radius: 8px;
-      }
-      .code-section {
-        background-color: #2d2d2d;
-        color: #f8f8f2;
-        padding: 15px;
-        border-radius: 8px;
-        font-family: "Courier New", monospace;
-        overflow-x: auto;
-        white-space: pre-wrap;
-      }
-    </style>
 
   </head>
   <body>
@@ -166,7 +145,7 @@
       </h3>
       <p>
         I did use AI tools while completing this assignment, mainly ChatGPT. I used it to help with any clarification on questions, help on
-        any html or coding assistance, and whenever looking information the normal way does not give me the results I want. My reflection on 
+        any html or coding assistance, and whenever looking for information the normal way does not give me the results I want. My reflection on 
         using AI tools honestly help me a lot to express or try out new ways of thinking or organize the way I store information.
         Although, I would still prefer to understand the code and the content connected to my projects in the more tradional way, AI has its perks
         in simplifying anything that is too complex. I also see AI as more as an assistant to help me understand content better rather than it being use to find the solution.
