--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
       <div class="assignment">
         <a href="a2.html">
           <h2>Assignment 2: Fade!</h2>
-          <img src="images/red-panda.jpg" />
+          <img src="images/A2-Circuitry-Arduino.jpeg" />
         </a>
-        <p>Assignment 2 was a panda!</p>
+        <p>
+          Creating a fade sequence using a push button and LEDs on the Arduino with a twist of my own idea integrated
+        </p>
       </div>
 
       <div class="assignment">
