--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
       </div>
 
       <div class="assignment">
-        <a href="a2.html">
-          <h2>Assignment 2: Fade!</h2>
-          <img src="images/red-panda.jpg" />
+        <a href="a3.html">
+          <h2>Assignment 3: Input Output!</h2>
+          <img src="images/A3-Circuitry.jpeg" />
         </a>
-        <p>Assignment 2 was a panda!</p>
+        <p>
+          Using light as input to cause a buzzer to go off and LEDs to change brightness based on if the photoresistor is covered
+          or not.
+        </p>
       </div>
     </div>
   </body>
