A3 small text changes

--- a/a3.html
+++ b/a3.html
@@ -211,7 +211,7 @@
       <p>
         Not an accurate representation of the shared gif, realistically should follow the same premise with the voltage either being high or low
         with some slight dips and hills depending if something passes over it and casts a shadow which can change the voltage. However, kept it as covered and exposed to light
-        for simplicity, although it feels instant, it does take a bit to stabilize so there is some curve to it between states.
+        for simplicity, although it is rather a quick change, it does take a bit to stabilize so there is some curve to it between states.
       </p>
       <br>
       <h3>
