A4 and website progress update

--- a/a3.html
+++ b/a3.html
@@ -16,7 +16,7 @@
       <h2>Overview</h2>
       <p>
         Creating a circuit using a photoresistor in a voltage divider to change the state of the buzzer and
-        turn it on or off. Integrating a red and green LED to help the user calibrate the minimum and
+        turn it on or off. While also integrating a red and green LED to help the user calibrate the minimum and
         maximum sensor values during the 5 second period during the initial set up. Code is executed
         through arduino and is run and connected with a breadboard. A buzzer makes a beep when the mapped
         value is above 200 with the red and green LEDs getting brighter or dimmer alongside the corresponding mapped value.
