--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
           or not.
         </p>
       </div>
+      <div class="assignment">
+        <a href="a4.html">
+          <h2>Assignment 4: Input Output!</h2>
+          <img src="images/A3-Circuitry.jpeg" />
+        </a>
+        <p>
+          Using light as input to cause a buzzer to go off and LEDs to change brightness based on if the photoresistor is covered
+          or not.
+        </p>
+      </div>
     </div>
   </body>
 </html>
