Updated A4 index picture to correct one

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="assignment">
         <a href="a4.html">
           <h2>Assignment 4: Input Output!</h2>
-          <img src="images/A3-Circuitry.jpeg" />
+          <img src="images/A4-Circuit-Schematic.png" />
         </a>
         <p>
           Using light as input to cause a buzzer to go off and LEDs to change brightness based on if the photoresistor is covered
