--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
       </div>
       <div class="assignment">
         <a href="a4.html">
-          <h2>Assignment 4: Input Output!</h2>
+          <h2>Assignment 4: Libraries!</h2>
           <img src="images/A4-Circuit-Schematic.png" />
         </a>
         <p>
-          Using light as input to cause a buzzer to go off and LEDs to change brightness based on if the photoresistor is covered
-          or not.
+          Using libraries to combine and integrate different input and output components together
         </p>
       </div>
     </div>
