Small grammar mistakes A4

--- a/a4.html
+++ b/a4.html
@@ -48,11 +48,11 @@
         I used a 10kΩ (R1) and 2kΩ (R2) in a series (respectively) to help achieve the desired visibility I wanted using this equation Vout = Vin * R2 / (R1 +R2).
       </p>
       <p>
-        Vout = 5V * 2kΩ / (10kΩ + 2kΩ) = 0.83V, due to the low voltage this darkens/dims the white blocks so the text we want to see be displayed on the LCD
+        Vout = 5V * 2kΩ / (10kΩ + 2kΩ) = 0.83V, due to the low voltage this darkens/dims the white blocks so the text we want to see displayed on the LCD
         is sharper and more visible.
       </p>
       <p>
-        For the 220Ω we can uses Ohm's law (5V - 3.3V) / 220Ω = 7.73mA, this is assuming that the LED is a white LED which is a 3.3V
+        For the 220Ω we can use Ohm's law (5V - 3.3V) / 220Ω = 7.73mA, this is assuming that the LED is a white LED which is a 3.3V
         drop. With that accounted, this keeps the LED below 20mA making it safe for continuous usage.
       </p>
     </div>
