Final project Assignment integration

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
           Using libraries to combine and integrate different input and output components together
         </p>
       </div>
+      <div class="assignment">
+        <a href="final.html">
+          <h2>Final Project Assignment: RObotic Arm</h2>
+          <img src="images/final-project-proposal.jpg" />
+        </a>
+        <p>
+          Using what we learned to create our own project idea
+        </p>
+      </div>
     </div>
   </body>
 </html>
