--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="assignment">
         <a href="final.html">
-          <h2>Final Project Assignment: RObotic Arm</h2>
+          <h2>Final Project Assignment: Robotic Arm</h2>
           <img src="images/final-project-proposal.jpg" />
         </a>
         <p>
