--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         </p>
       </div>
       <div class="assignment">
+        <a href="a5.html">
+          <h2>Assignment 5: High(er) Voltage and Transistors!</h2>
+          <img src="images/A4-Circuit-Schematic.png" />
+        </a>
+        <p>
+          Using higher voltage to integrate higher demanding power components
+        </p>
+      </div>
+      <div class="assignment">
         <a href="final.html">
           <h2>Final Project Assignment: Robotic Arm</h2>
           <img src="images/final-project-proposal.jpg" />
