--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="assignment">
         <a href="a5.html">
           <h2>Assignment 5: High(er) Voltage and Transistors!</h2>
-          <img src="images/A4-Circuit-Schematic.png" />
+          <img src="images/A5-Circuitry.jpg" />
         </a>
         <p>
           Using higher voltage to integrate higher demanding power components
