--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <img src="images/A5-Circuitry.jpg" />
         </a>
         <p>
-          Using higher voltage to integrate higher demanding power components
+          Using transistors to integrate higher demanding power components
         </p>
       </div>
       <div class="assignment">
