--- a/a5.html
+++ b/a5.html
@@ -228,7 +228,7 @@
               setMotorB(Forward)
               delay(5000)
 
-              // Other variations that meet the requirements to move motors bot forward, backwards or each independently
+              // Other variations that meet the requirements to move motors both forward, backwards or each independently
         </pre>
       </p>
       <br>
