--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
         </p>
       </div>
       <div class="assignment">
+        <a href="a6.html">
+          <h2>Assignment 6: Talking To The Web!</h2>
+          <img src="images/A6-Circuitry.jpg" />
+        </a>
+        <p>
+          Using the Web to visualize joystick input while also displaying output through servo motors
+        </p>
+      </div>
+      <div class="assignment">
         <a href="final.html">
           <h2>Final Project Assignment: Robotic Arm</h2>
           <img src="images/final-project-proposal.jpg" />
